--- a/pom.xml
+++ b/pom.xml
@@ -46,7 +46,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>6.0.6</version>
         </dependency>
-        
+
         <!-- Libreria para gestion de getters, setters, toString de clases -->
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -59,6 +59,13 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.17</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.oracle.cdi-enabler</groupId>
+            <artifactId>cdi-enabler-1_0</artifactId>
+            <version>1</version>
+            <scope>compile</scope>
         </dependency>
 
         <dependency>
